feat: registrations - temp just to publish branch
